# x-market

./: .gitignore  LICENSE  Macro_Data_Oracle.md  Macro_Data_Oracle.zh.md  Move.toml  PRD.md  PRD.zh.md  Published.toml  Published.v1.toml.bak  README.md  README.zh.md  SuiProphet_Network.md  SuiProphet_Network.zh.md  docker-compose.indexer.yml  docker-compose.production-public.yml  docker-compose.production.yml  docker-compose.services.yml  uma1.md  uma1.zh.md  uma2.md  uma2.zh.md
app/: .env.example  next-env.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
deploy/: publish-v2.toml  testnet-v2.json  testnet.json
docs/: Categorical_Distribution_QA.md  business-spec.md  business-spec.zh.md  compliance-geoblock.md  compliance-geoblock.zh.md  deferred-features.md  deferred-features.zh.md  demo-walkthrough.md  demo-walkthrough.zh.md  faq-public.md  faq-public.zh.md  football-wdl-solution.md  football-wdl-solution.zh.md  gas-station-implementation.md  gas-station-implementation.zh.md  glossary.md  glossary.zh.md  governance-params-baseline.json  governance-params-signoff.md  governance-params-signoff.zh.md  iv-lp-guard-and-vol-crush-explained.md  iv-lp-guard-and-vol-crush-explained.zh.md  mainnet-drill-2026-06-06.json  mainnet-drill-2026-06-06.md  mainnet-drill-2026-06-06.zh.md  mainnet-drill-record-template.md  mainnet-drill-record-template.zh.md  mainnet-governance-params.md  mainnet-governance-params.zh.md  mainnet-infra-priority.md  mainnet-infra-priority.zh.md  mainnet-readiness-checklist.md  mainnet-readiness-checklist.zh.md  market-page-ui-by-lifecycle.md  market-page-ui-by-lifecycle.zh.md  on-chain-distribution-math.zh.md  oracle-oncall-schedule.md  oracle-oncall-schedule.zh.md  oracle-playbook.md  oracle-playbook.zh.md  (+43 more)
faucet/: Move.toml
math-spec/: SPEC.md  SPEC.zh.md  exp_neg_lut.json  test-vectors.json
math-spec/reference/: Cargo.toml
math-spec/reference/src/: lib.rs
mobile/x_market_flutter/rust/: Cargo.toml
mobile/x_market_flutter/rust/src/: frb_generated.rs  lib.rs
mobile/x_market_flutter/rust/src/api/: mod.rs  phantom.rs  simple.rs  wallet.rs
pricing-engine/: Dockerfile  package-lock.json  package.json
scripts/: add-bsl-headers.mjs  bootstrap-indexer-env.ps1  bootstrap-indexer-env.sh  bootstrap-local-postgres.ps1  bootstrap-mobile-env.ps1  bootstrap-production-env.sh  bootstrap-services-env.ps1  bootstrap-services-env.sh  check-gas-balances.ps1  deploy-backend-ubuntu-docker.sh  deploy-backend-ubuntu-native.sh  deploy-backend-ubuntu.sh  deploy-frontend-vercel.sh  deploy-oracle-prophet-testnet.ps1  deploy-testnet.ps1  deploy-testnet.sh  export-governance-baseline.ps1  export_pptx_slides.py  fix-postgres-public-schema.sh  (+52 more)
(+449 files in other folders)
