[package]
name = "x-market-math-ref"
version = "0.1.0"
edition = "2021"
description = "Reference f64 implementation for @x-market/math-spec test vectors"

[[bin]]
name = "verify_vectors"
path = "src/bin/verify_vectors.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
