[package]
name = "rust_lib_x_market_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
blake2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
xsalsa20poly1305 = "0.9"
serde_json = "1"
base64 = "0.22"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
