# Copyright (c) 2026 zouyc zouyccq@gmail.com.
# All rights reserved.
#
# Licensed under the Business Source License 1.1 (BSL 1.1).
# You may not use this file except in compliance with the License.
#
# Change Date: 2031-01-01
# On the Change Date, or the fourth anniversary of the first publicly available
# distribution of the code under the BSL, whichever comes first, the code
# automatically becomes available under the Apache License 2.0.

[package]
name = "rust_lib_x_market_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
blake2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
xsalsa20poly1305 = "0.9"
serde_json = "1"
base64 = "0.22"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
